# simpleDB

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  simpledbms
includes/: column.h  query_processor.h  row.h  storage.h  table.h  value.h
includes/indexing/: btree.h  index_manager.h
includes/queries/: create.h  insert.h  select.h
includes/query_handler/: create.h  insert.h  select.h
scripts/: build.sh  package.sh
src/: main.cpp
